<resources>
    <string name="app_name">Github Client</string>
    <string name="repo_name">Nombre del repositorio</string>
    <string name="repo_description">Descripción del repositorio</string>
    <string name="repo_lang">Lenguaje</string>
    <string name="test_text">Texto de prueba</string>
    <string name="fab_add_task">Agregar tarea</string>
    <string name="image_description">Imagen del Repo</string>

    <string name="btn_save">Guardar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_edit_repo">Editar Repositorio</string>
    <string name="btn_delete_repo">Eliminar Repositorio</string>

</resources>