<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/icon_and_actions_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/repo_owner_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_description"
                android:layout_marginBottom="8dp"
                tools:src="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/btnEditRepo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_edit"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/btn_edit_repo"
                    android:background="@android:color/transparent"/>

                <ImageButton
                    android:id="@+id/btnDeleteRepo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_delete"
                    android:contentDescription="@string/btn_delete_repo"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:orientation="vertical"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/repo_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    tools:text="Test Text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/repo_description"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repo_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    tools:text="Test Text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/repo_lang"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repo_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    tools:text="Test Text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>